fix(post): call stack

--- a/data/posts/know-how-call-stack-works-javascript.mdx
+++ b/data/posts/know-how-call-stack-works-javascript.mdx
@@ -7,7 +7,7 @@ que invito a que revises después de terminar de ver esta post.
 ## Stack o Pila
 
 Para continuar vamos a entender que es una pila o stack. Este es un algoritmo conocido por sus siglas
-[FIFO](https://es.wikipedia.org/wiki/Last_in,_first_out) que significa **Last in, First up**. Un ejemplo para entender
+[LIFO](https://es.wikipedia.org/wiki/Last_in,_first_out) que significa **Last in, First Out**. Un ejemplo para entender
 mejor el concepto es cuando pensamos en varios libros uno sobre otro, 📚 a esto lo llamamos una pila de libros,
 si queremos poner un nuevo libro, lo hacemos poniéndolo encima de los que ya tenemos y si queremos obtener el libro del
 medio, debemos ir quitando los últimos libros que pusimos que son los de arriba hasta llegar al que queremos.
